--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                             <li data-index="rs-1" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off" data-easein="Linear.easeNone" data-easeout="Linear.easeNone" data-masterspeed="default" data-rotate="0" data-saveperformance="off"
                                                 data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
 
-                                                <img src="images/houses/01.webp" alt="" title="bg_header" width="1920" height="914" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
+                                                <img src="images/houses/09.jpeg" alt="" title="bg_header" width="1920" height="914" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-no-retina>
 
 
                                                 <div class="tp-caption slide_bg tp-resizeme" id="slide-1-layer-6" data-x="center" data-hoffset="" data-y="center" data-voffset="" data-width="['700']" data-height="['630']" data-transform_idle="o:1;" data-transform_in="y:bottom;s:800;e:Power2.easeOut;"
@@ -295,13 +295,13 @@
                             <section class="full-height-section no-col-padding columns-stretch content-middle">
                                 <div class="container">
                                     <div class="row">
-                                        <a id="sc_anchor_new_complex" class="sc_anchor sc_anchor_default" title="Design" data-icon="icon-note-2" data-url="#"></a>
+                                        <a id="sc_anchor_new_complex" class="sc_anchor sc_anchor_default" title="Design" data-icon="icon-note-2" data-url="#new_complex"></a>
                                         <div class="columns_wrap">
                                             <div class="column_container column-1_1">
                                                 <div class="column-inner">
                                                     <div class="height_large"></div>
                                                     <div class="sc_promo sc_promo_modern sc_promo_size_large sc_promo_no_paddings sc_promo_image_position_right sc_promo_image_width_50p">
-                                                        <div class="sc_promo_image_wrap">
+                                                        <div class="sc_promo_image_wrap" style="right:unset; left:0;">
                                                             <div class="sc_promo_image bg_image_1">
                                                                 <img src="images/design/01.jpeg" style="height: 100%; object-fit: cover; width: 100%">
                                                             </div>
@@ -312,7 +312,7 @@
                                                             </a>
                                                             -->
                                                         </div>
-                                                        <div class="sc_promo_text">
+                                                        <div class="sc_promo_text" style="margin-left:50%;">
                                                             <div class="sc_promo_text_inner">
                                                                 <h6 class="sc_item_subtitle sc_promo_subtitle sc_align_default sc_item_title_style_default">Appartamenti di Lusso</h6>
                                                                 <!--<h2 class="sc_item_title sc_promo_title sc_align_default sc_item_title_style_default">Introducing a new residential complex</h2>-->
@@ -332,6 +332,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="height_large"></div>
+                                
                                                     <div class="row">
                                                         <div class="columns_wrap">
                                                             <div class="column_container column-1_1 scheme_dark">
@@ -376,6 +377,101 @@
                                                             </div>
                                                         </div>
                                                     </div>
+                                                    <div class="height_large"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </section>
+
+                            <section class="full-height-section no-col-padding columns-stretch content-middle">
+                                <div class="container">
+                                    <div class="row">
+                                        <a id="sc_anchor_new_complex_2" class="sc_anchor sc_anchor_default" title="Finiture" data-icon="icon-note-2" data-url="#new_complex_2"></a>
+                                        <div class="columns_wrap">
+                                            <div class="column_container column-1_1">
+                                                <div class="column-inner">
+                                                    <div class="height_large"></div>
+                                                    <div class="sc_promo sc_promo_modern sc_promo_size_large sc_promo_no_paddings sc_promo_image_position_right sc_promo_image_width_50p">
+                                                        <div class="sc_promo_image_wrap">
+                                                            <div class="sc_promo_image bg_image_1">
+                                                                <img src="images/design/07.jpeg" style="height: 100%; object-fit: cover; width: 100%">
+                                                            </div>
+                                                            <!--
+                                                            <a class="sc_promo_link2" href="images/design/02.jpeg">
+                                                                <span>Altre</span>
+                                                                <span>FOTO</span>
+                                                            </a>
+                                                            -->
+                                                        </div>
+                                                        <div class="sc_promo_text">
+                                                            <div class="sc_promo_text_inner">
+                                                                <h6 class="sc_item_subtitle sc_promo_subtitle sc_align_default sc_item_title_style_default"></h6>
+                                                                <!--<h2 class="sc_item_title sc_promo_title sc_align_default sc_item_title_style_default">Introducing a new residential complex</h2>-->
+                                                                <h2 class="sc_item_title sc_promo_title sc_align_default sc_item_title_style_default">Finiture</h2>
+                                                                <div class="sc_item_descr sc_promo_descr sc_align_default">L’accurata selezione di colori e finiture assicura un’autenticità stilistica senza eguali, mentre le più moderne tecnologie garantiscono prestazioni tecniche, pratiche e funzionali di altissimo livello.</div>
+                                                                <div class="sc_item_button sc_item_button_simple sc_promo_button sc_align_default sc_button_wrap">
+                                                                    <!--
+                                                                    <a href="#" class="sc_button sc_button_simple sc_button_size_normal sc_button_icon_left">
+                                                                        <span class="sc_button_text">
+																			<span class="sc_button_title">Leggi di più</span>
+                                                                        </span>
+                                                                    </a>
+                                                                    -->
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="height_large"></div>
+                                                    <!--
+                                                        <div class="row">
+                                                        <div class="columns_wrap">
+                                                            <div class="column_container column-1_1 scheme_dark">
+                                                                <div class="column-inner pn">
+                                                                    <div id="sc_skills_1" class="sc_skills sc_skills_counter" data-type="counter">
+                                                                        <div class="sc_skills_columns sc_item_columns trx_addons_columns_wrap columns_padding_bottom">
+                                                                            <div class="sc_skills_column trx_addons_column-1_4">
+                                                                                <div class="sc_skills_item_wrap">
+                                                                                    <div class="sc_skills_item">
+                                                                                        <div class="sc_skills_total" data-start="0" data-stop="136" data-step="13" data-max="1250" data-speed="26" data-duration="272" data-ed="">0</div>
+                                                                                    </div>
+                                                                                    <div class="sc_skills_item_title">Appartamenti Lussuosi</div>
+                                                                                </div>
+                                                                            </div>
+                                                                            <div class="sc_skills_column trx_addons_column-1_4">
+                                                                                <div class="sc_skills_item_wrap">
+                                                                                    <div class="sc_skills_item">
+                                                                                        <div class="sc_skills_total" data-start="0" data-stop="355" data-step="13" data-max="1250" data-speed="30" data-duration="819" data-ed="">0</div>
+                                                                                    </div>
+                                                                                    <div class="sc_skills_item_title">Stanze da Letto</div>
+                                                                                </div>
+                                                                            </div>
+                                                                            <div class="sc_skills_column trx_addons_column-1_4">
+                                                                                <div class="sc_skills_item_wrap">
+                                                                                    <div class="sc_skills_item">
+                                                                                        <div class="sc_skills_total" data-start="0" data-stop="326" data-step="13" data-max="1250" data-speed="15" data-duration="376" data-ed="">0</div>
+                                                                                    </div>
+                                                                                    <div class="sc_skills_item_title">Square Areas</div>
+                                                                                </div>
+                                                                            </div>
+                                                                            <div class="sc_skills_column trx_addons_column-1_4">
+                                                                                <div class="sc_skills_item_wrap">
+                                                                                    <div class="sc_skills_item">
+                                                                                        <div class="sc_skills_total" data-start="0" data-stop="1225" data-step="13" data-max="1250" data-speed="33" data-duration="3110" data-ed="">0</div>
+                                                                                    </div>
+                                                                                    <div class="sc_skills_item_title">Clienti Soddisfatti</div>
+                                                                                </div>
+                                                                            </div>
+                                                                        </div>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                    -->
+                                                    
+
                                                     <div class="height_large"></div>
                                                 </div>
                                             </div>
