Fixata posizione immagine e altezza contenitore

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                     <article class="post_item_single page">
                         <div class="post_content entry-content">
 
-                            <section class="full-height-section no-col-padding columns-stretch content-middle">
+                            <section class="no-col-padding columns-stretch content-middle" style="min-height: 90vh; display: flex; align-items: center;">
                                 <div class="container">
                                     <div class="row">
                                         <a id="sc_anchor_new_complex" class="sc_anchor sc_anchor_default" title="Design" data-icon="icon-note-2" data-url="#new_complex"></a>
@@ -385,7 +385,7 @@
                                 </div>
                             </section>
 
-                            <section class="full-height-section no-col-padding columns-stretch content-middle">
+                            <section class="no-col-padding columns-stretch content-middle" style="min-height: 80vh;">
                                 <div class="container">
                                     <div class="row">
                                         <a id="sc_anchor_new_complex_2" class="sc_anchor sc_anchor_default" title="Finiture" data-icon="icon-note-2" data-url="#new_complex_2"></a>
@@ -393,8 +393,8 @@
                                             <div class="column_container column-1_1">
                                                 <div class="column-inner">
                                                     <div class="height_large"></div>
-                                                    <div class="sc_promo sc_promo_modern sc_promo_size_large sc_promo_no_paddings sc_promo_image_position_right sc_promo_image_width_50p">
-                                                        <div class="sc_promo_image_wrap">
+                                                    <div class="sc_promo sc_promo_modern sc_promo_size_large sc_promo_no_paddings sc_promo_image_position_right sc_promo_image_width_50p" style="height: 500px;">
+                                                        <div class="sc_promo_image_wrap" style="width: 60%;">
                                                             <div class="sc_promo_image bg_image_1">
                                                                 <img src="images/design/07.jpeg" style="height: 100%; object-fit: cover; width: 100%">
                                                             </div>
@@ -405,7 +405,7 @@
                                                             </a>
                                                             -->
                                                         </div>
-                                                        <div class="sc_promo_text">
+                                                        <div class="sc_promo_text" style="top: 50%; transform: translateY(-50%); width: 45%;">
                                                             <div class="sc_promo_text_inner">
                                                                 <h6 class="sc_item_subtitle sc_promo_subtitle sc_align_default sc_item_title_style_default"></h6>
                                                                 <!--<h2 class="sc_item_title sc_promo_title sc_align_default sc_item_title_style_default">Introducing a new residential complex</h2>-->
