Aggiunti i punti interattivi bene

--- a/index.html
+++ b/index.html
@@ -1262,17 +1262,16 @@
                                     <div class="row">
                                         <a id="sc_anchor_neiborhoods" class="sc_anchor sc_anchor_default" title="posizione" data-icon="icon-map" data-url=""></a>
                                         <div class="columns_wrap">
-                                            <div class="column_container column-2_3 push-1_3">
+                                            <div class="column_container column-2_3">
                                                 <div class="column-inner">
-                                                    <div class="height_large"></div>
                                                     <div class="sc_content sc_content_default">
                                                         <h6 class="sc_item_subtitle sc_content_subtitle sc_align_right sc_item_title_style_default">Apartment Neiborhoods</h6>
                                                         <h2 class="sc_item_title sc_content_title sc_align_right sc_item_title_style_default">STUNNING LUXURY RENTAL APARTMENTS, DESIGNED FOR LIFE</h2>
                                                         <div class="sc_content_container"></div>
                                                     </div>
                                                     <div class="cqtooltip-wrapper hotspots-style-1" data-opacity="1" data-tooltipanimation="grow" data-tooltipstyle="light" data-trigger="hover" data-maxwidth="240" data-marginoffset="" data-isdisplayall="off" data-displayednum="1">
-                                                        <img src="images/spacer-100x100.png" alt="" />
-                                                        <div class="cq-hotspots">
+                                                        <img src="images/transparent.png" alt="" style="width: 80vw;height: 80vh;max-width: unset;" />
+                                                        <div class="cq-hotspots" style="width: 80vw;">
                                                             <div class="hotspot-item pulse-white" data-top="31%" data-left="0%">
                                                                 <a href="#" class="cq-tooltip" data-tooltip="&lt;span class=&quot;translation-chunk&quot; data-align=&quot;0:10&quot;&gt;SOUTH BRIDGE&lt;/span&gt;" data-arrowposition="">
                                                                     <span></span>
