Fixata snazzy maps con key

--- a/index.html
+++ b/index.html
@@ -1491,9 +1491,8 @@
 
 
                                                     <div id="sc_googlemap_1_wrap" class="sc_googlemap_wrap">
-                                                        <div id="sc_googlemap_1" class="sc_googlemap sc_googlemap_default h92vh" data-zoom="16" data-style="dark">
-                                                            <iframe frameborder="0" style="border: 0px; width: 100%; height: 100%;" src="https://snazzymaps.com/style/35/avocado-world" aria-label="123, New Lenox Chicago, IL 60606, USA ">
-															</iframe>
+                                                        <div id="sc_googlemap_1" class="sc_googlemap sc_googlemap_default h92vh" style="padding-top: 100px;" data-zoom="16" data-style="dark">
+                                                            <iframe src="https://snazzymaps.com/embed/382113" width="100%" height="600px" style="border:none;"></iframe>
                                                         </div>
                                                     </div>
 
