--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                             <section class="no-col-padding columns-stretch content-middle" style="min-height: 90vh; display: flex; align-items: center;">
                                 <div class="container">
                                     <div class="row">
-                                        <a id="sc_anchor_new_complex" class="sc_anchor sc_anchor_default" title="Design" data-icon="icon-note-2" data-url="#new_complex"></a>
+                                        <a id="sc_anchor_new_complex" class="sc_anchor sc_anchor_default" title="Design" data-icon="icon-diamond-light" data-url="#new_complex"></a>
                                         <div class="columns_wrap">
                                             <div class="column_container column-1_1">
                                                 <div class="column-inner">
@@ -388,7 +388,7 @@
                             <section class="no-col-padding columns-stretch content-middle" style="min-height: 80vh;">
                                 <div class="container">
                                     <div class="row">
-                                        <a id="sc_anchor_new_complex_2" class="sc_anchor sc_anchor_default" title="Finiture" data-icon="icon-note-2" data-url="#new_complex_2"></a>
+                                        <a id="sc_anchor_new_complex_2" class="sc_anchor sc_anchor_default" title="Finiture" data-icon="icon-star-2" data-url="#new_complex_2"></a>
                                         <div class="columns_wrap">
                                             <div class="column_container column-1_1">
                                                 <div class="column-inner">
@@ -483,7 +483,7 @@
                             <section class="full-height-section no-col-padding columns-stretch content-middle bg_image_2">
                                 <div class="container">
                                     <div class="row">
-                                        <a id="sc_anchor_photo_tour" class="sc_anchor sc_anchor_default" title="Foto" data-icon="icon-note-2" data-url=""></a>
+                                        <a id="sc_anchor_photo_tour" class="sc_anchor sc_anchor_default" title="Foto" data-icon="icon-pictures" data-url=""></a>
                                         <div class="columns_wrap">
                                             <div class="column_container column-1_1">
                                                 <div class="column-inner">
@@ -1262,11 +1262,11 @@
                                     <div class="row">
                                         <a id="sc_anchor_neiborhoods" class="sc_anchor sc_anchor_default" title="posizione" data-icon="icon-map" data-url=""></a>
                                         <div class="columns_wrap">
-                                            <div class="column_container column-2_3">
+                                            <div class="column_container">
                                                 <div class="column-inner">
                                                     <div class="sc_content sc_content_default">
                                                         <h6 class="sc_item_subtitle sc_content_subtitle sc_align_right sc_item_title_style_default">Apartment Neiborhoods</h6>
-                                                        <h2 class="sc_item_title sc_content_title sc_align_right sc_item_title_style_default">STUNNING LUXURY RENTAL APARTMENTS, DESIGNED FOR LIFE</h2>
+                                                        <h2 class="sc_item_title sc_content_title sc_align_right sc_item_title_style_default">STUNNING LUXURY RENTAL APARTMENTS,<br>DESIGNED FOR LIFE</h2>
                                                         <div class="sc_content_container"></div>
                                                     </div>
                                                     <div class="cqtooltip-wrapper hotspots-style-1" data-opacity="1" data-tooltipanimation="grow" data-tooltipstyle="light" data-trigger="hover" data-maxwidth="240" data-marginoffset="" data-isdisplayall="off" data-displayednum="1">
