--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
 
                                                 <div class="tp-caption rev-btn  tp-resizeme  theme_button slide_button" id="slide-1-layer-2" data-x="center" data-hoffset="" data-y="center" data-voffset="150" data-width="['auto']" data-height="['auto']" data-transform_idle="o:1;" data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:0;e:Linear.easeNone;"
                                                     data-style_hover="c:rgba(0, 0, 0, 1.00);bg:rgba(255, 255, 255, 1.00);" data-transform_in="y:50px;opacity:0;s:500;e:Power2.easeOut;" data-transform_out="opacity:0;s:300;" data-start="2700" data-splitin="none"
-                                                    data-splitout="none" data-actions='[{"event":"click","action":"simplelink","target":"_blank","url":"http:\/\/themeforest.net\/user\/themerex\/portfolio","delay":""}]' data-responsive_offset="on">Scopri Di Più </div>
+                                                    data-splitout="none" > <a href="tel:555-555-5555" style="color: white; background-color: #88b04b;"> Chiamaci Subito!</a> </div>
+
+                                                    <!--data-actions='[{"event":"click","action":"simplelink","target":"_blank","url":"http:\/\/themeforest.net\/user\/themerex\/portfolio","delay":""}]' data-responsive_offset="on"-->
 
                                                 <div class="tp-caption   tp-resizeme  slide_scroll" id="slide-1-layer-3" data-x="center" data-hoffset="" data-y="bottom" data-voffset="40" data-width="['auto']" data-height="['auto']" data-transform_idle="o:1;" data-transform_in="opacity:0;s:500;e:Power2.easeOut;"
                                                     data-transform_out="opacity:0;s:300;" data-start="3000" data-splitin="none" data-splitout="none" data-actions='[{"event":"click","action":"scrollbelow","offset":"px","delay":""}]' data-responsive_offset="on">
@@ -492,7 +494,7 @@
                                                         <div class="sc_promo_text">
                                                             <div class="sc_promo_text_inner">
                                                                 <!--<h6 class="sc_item_subtitle sc_promo_subtitle sc_align_center sc_item_title_style_shadow">02</h6>-->
-                                                                <h2 class="sc_item_title sc_promo_title sc_align_center sc_item_title_style_shadow">Foto</h2>
+                                                                <h2 class="sc_item_title sc_promo_title sc_align_center sc_item_title_style_shadow" style="color: #495e35;">Foto</h2>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -1265,8 +1267,8 @@
                                             <div class="column_container">
                                                 <div class="column-inner">
                                                     <div class="sc_content sc_content_default">
-                                                        <h6 class="sc_item_subtitle sc_content_subtitle sc_align_right sc_item_title_style_default">Apartment Neiborhoods</h6>
-                                                        <h2 class="sc_item_title sc_content_title sc_align_right sc_item_title_style_default">STUNNING LUXURY RENTAL APARTMENTS,<br>DESIGNED FOR LIFE</h2>
+                                                        <h6 class="sc_item_subtitle sc_content_subtitle sc_align_right sc_item_title_style_default">Vicinato</h6>
+                                                        <h2 class="sc_item_title sc_content_title sc_align_right sc_item_title_style_default">Più SERVIZI<br>PIù AREE PER I PICCOLI</h2>
                                                         <div class="sc_content_container"></div>
                                                     </div>
                                                     <div class="cqtooltip-wrapper hotspots-style-1" data-opacity="1" data-tooltipanimation="grow" data-tooltipstyle="light" data-trigger="hover" data-maxwidth="240" data-marginoffset="" data-isdisplayall="off" data-displayednum="1">
@@ -1443,7 +1445,7 @@
                                 </div>
                             </section>-->
 
-                            <section class="no-col-padding columns-stretch column-xs-12 column-equal-height columns-flex scheme_side">
+                            <section class="no-col-padding columns-stretch column-xs-12 column-equal-height columns-flex scheme_side" style="height: 80vh;">
                                 <div class="container-fluid">
                                     <div class="row">
                                         <div class="columns_wrap">
@@ -1463,7 +1465,8 @@
                                                         </div>
                                                     </div>
                                                     <div class="height_medium"></div>
-                                                    <div class="widget_area sc_widget_socials">
+                                                    <!--
+                                                        <div class="widget_area sc_widget_socials">
                                                         <aside class="widget widget_socials">
                                                             <div class="socials_wrap sc_align_center">
                                                                 <span class="social_item">
@@ -1482,6 +1485,8 @@
                                                             </div>
                                                         </aside>
                                                     </div>
+                                                    -->
+                                                    
                                                     <div class="height_medium"></div>
                                                 </div>
                                             </div>
@@ -1503,7 +1508,7 @@
                                                 <div class="column-inner ph20p">
                                                     <div class="height_large"></div>
                                                     <div class="height_huge hide_on_mobile"></div>
-                                                    <h3 class="trx_addons_no_margins sc_align_center">Inviaci un messaggio</h3>
+                                                    <h3 class="trx_addons_no_margins sc_align_center">Contattaci</h3>
                                                     <div class="height_small"></div>
                                                     <div class="sc_content sc_content_default">
                                                         <div class="sc_content_container">
@@ -1516,22 +1521,40 @@
                                                                         <div class="trx_addons_columns_wrap">
                                                                             <div class="sc_form_details trx_addons_column-1_2">
                                                                                 <label class="sc_form_field sc_form_field_name required">
-																			<span class="sc_form_field_wrap">
-																				<input type="text" name="name" aria-required="true" id="contact_form_username" placeholder="Nome">
-																			</span>
-																		</label>
+																			        <span class="sc_form_field_wrap">
+																				        <input type="text" name="name" aria-required="true" id="contact_form_username" placeholder="Nome">
+																			        </span>
+																		        </label>
+                                                                                <label class="sc_form_field sc_form_field_name required">
+                                                                                    <span class="sc_form_field_wrap">
+                                                                                        <input type="text" name="cognome" aria-required="true" id="contact_form_username" placeholder="Cognome">
+                                                                                    </span>
+                                                                                </label>
                                                                                 <label class="sc_form_field sc_form_field_email required">
-																			<span class="sc_form_field_wrap">
-																				<input type="text" name="email" aria-required="true" id="contact_form_email" placeholder="e-mail">
-																			</span>
-																		</label>
+																			        <span class="sc_form_field_wrap">
+																				        <input type="text" name="email" aria-required="true" id="contact_form_email" placeholder="e-mail">
+																			        </span>
+																		        </label>
                                                                             </div>
                                                                             <div class="sc_form_message trx_addons_column-1_2">
-                                                                                <label class="sc_form_field sc_form_field_message required">
-																			<span class="sc_form_field_wrap">
-																				<textarea name="message" aria-required="true" id="contact_form_message" placeholder="Messaggio"></textarea>
-																			</span>
-																		</label>
+                                                                                <label class="sc_form_field sc_form_field_name required">
+                                                                                    <span class="sc_form_field_wrap">
+                                                                                        <input type="text" name="telefono" aria-required="true" id="contact_form_username" placeholder="Telefono">
+                                                                                    </span>
+                                                                                </label>
+                                                                                <label class="sc_form_field sc_form_field_name required">
+                                                                                    <span class="sc_form_field_wrap">
+                                                                                        <input type="text" name="Comune" aria-required="true" id="contact_form_username" placeholder="Comune">
+                                                                                    </span>
+                                                                                </label>
+                                                                                <label class="sc_form_field sc_form_field_name required">
+                                                                                    <span class="sc_form_field_wrap">
+                                                                                        <input type="text" name="Cap" aria-required="true" id="contact_form_username" placeholder="Cap">
+                                                                                    </span>
+                                                                                </label>
+                                                                            </div>
+                                                                            <div>
+                                                                                Letta e compresa <a href ="privacy/informativa_privacy.pdf" style="color: white;">l'informativa privacy</a>, ai sensi dell'art. 6 del Regolamento Europeo in materia di Protezione dei Dati n. 679/2016, presto il consenso all’utilizzo dei miei dati per:
                                                                             </div>
                                                                         </div>
                                                                         <div class="sc_form_field sc_form_field_button">
@@ -1561,7 +1584,7 @@
                     <div class="copyright_wrap_inner">
                         <div class="content_wrap">
                             <div class="copyright_text">
-                                <a target="_blank" href="https://themerex.net/"> ThemeREX </a>© <span id="date"></span> . All rights reserved. <a target="_blank" href="http://themerex.net/terms-of-service/">Terms of use</a> and <a target="_blank" href="http://themerex.net/privacy-policy/">Privacy Policy</a>
+                                <a target="_blank" href="https://themerex.net/"> Makuda </a>© <span id="date"></span> . All rights reserved. <a target="_blank" href="http://themerex.net/terms-of-service/">Terms of use</a> and <a target="_blank" href="http://themerex.net/privacy-policy/">Privacy Policy</a>
                             </div>
                         </div>
                     </div>
