--- a/index.html
+++ b/index.html
@@ -308,12 +308,6 @@
                                                             <div class="sc_promo_image bg_image_1">
                                                                 <img src="images/design/01.jpeg" style="height: 100%; object-fit: cover; width: 100%">
                                                             </div>
-                                                            <!--
-                                                            <a class="sc_promo_link2" href="images/design/02.jpeg">
-                                                                <span>Altre</span>
-                                                                <span>FOTO</span>
-                                                            </a>
-                                                            -->
                                                         </div>
                                                         <div class="sc_promo_text" style="margin-left:50%;">
                                                             <div class="sc_promo_text_inner">
@@ -434,7 +428,7 @@
                                                             <div class="sc_promo_text">
                                                                 <div class="sc_promo_text_inner">
                                                                     <!--<h6 class="sc_item_subtitle sc_promo_subtitle sc_align_center sc_item_title_style_shadow">02</h6>-->
-                                                                    <h2 class="sc_item_title sc_promo_title sc_align_center sc_item_title_style_shadow" style="color: #495e35;">Foto</h2>
+                                                                    <h2 class="sc_item_title sc_promo_title sc_align_center sc_item_title_style_shadow" style="color: #88b04b;">Foto</h2>
                                                                 </div>
                                                             </div>
                                                         </div>
