--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                                                     <div class="sc_promo sc_promo_modern sc_promo_size_large sc_promo_no_paddings sc_promo_image_position_right sc_promo_image_width_50p">
                                                         <div class="sc_promo_image_wrap" style="right:unset; left:0;">
                                                             <div class="sc_promo_image bg_image_1">
-                                                                <img src="images/design/01.jpeg" style="height: 100%; object-fit: cover; width: 100%">
+                                                                <img src="images/design/01.jpeg" style="height: 100%; width: 100%; object-fit: cover; position: absolute;">
                                                             </div>
                                                         </div>
                                                         <div class="sc_promo_text" style="margin-left:50%;">
@@ -393,10 +393,11 @@
                                                     <div class="sc_promo sc_promo_modern sc_promo_size_large sc_promo_no_paddings sc_promo_image_position_right sc_promo_image_width_50p" style="height: 500px;">
                                                         <div class="sc_promo_image_wrap" style="width: 60%;">
                                                             <div class="sc_promo_image bg_image_1">
-                                                                <img src="images/design/07.jpeg" style="height: 100%; object-fit: cover; width: 100%">
+                                                                <img src="images/design/07.jpeg" style="height: 100%; width: 100%; object-fit: cover; position: absolute;">
                                                             </div>
                                                         </div>
-                                                        <div class="sc_promo_text" style="top: 50%; transform: translateY(-50%); width: 45%;">
+                                                        <div class="sc_promo_text my_promo_cst"">
+                                                        <!--<div class="sc_promo_text" style="top: 50%; transform: translateY(-50%); width: 45%;"></div>-->
                                                             <div class="sc_promo_text_inner">
                                                                 <h6 class="sc_item_subtitle sc_promo_subtitle sc_align_default sc_item_title_style_default"></h6>
                                                                 <!--<h2 class="sc_item_title sc_promo_title sc_align_default sc_item_title_style_default">Introducing a new residential complex</h2>-->
@@ -1092,10 +1093,11 @@
                                                     <div class="sc_promo sc_promo_modern sc_promo_size_large sc_promo_no_paddings sc_promo_image_position_right sc_promo_image_width_50p" style="height: 500px;">
                                                         <div class="sc_promo_image_wrap" style="width: 60%;">
                                                             <div class="sc_promo_image bg_image_1">
-                                                                <img src="images/olona/greenway.jpeg" style="height: 100%; object-fit: cover; width: 100%">
+                                                                <img src="images/olona/greenway.jpeg" style="height: 100%; width: 100%; object-fit: cover; position: absolute;">
                                                             </div>
                                                         </div>
-                                                        <div class="sc_promo_text" style="top: 50%; transform: translateY(-50%); width: 45%;">
+                                                        <div class="sc_promo_text my_promo_cst">
+                                                        <!--<div class="sc_promo_text" style="top: 50%; transform: translateY(-50%); width: 45%;">-->
                                                             <div class="sc_promo_text_inner">
                                                                 <h6 class="sc_item_subtitle sc_promo_subtitle sc_align_default sc_item_title_style_default"></h6>
                                                                 <!--<h2 class="sc_item_title sc_promo_title sc_align_default sc_item_title_style_default">Introducing a new residential complex</h2>-->
