--- a/index.html
+++ b/index.html
@@ -1122,7 +1122,8 @@
                                         <div class="columns_wrap">
                                             <div class="column_container">
                                                 <div class="column-inner">
-                                                    <div class="sc_content sc_content_default" style="padding-right: 150px;">
+                                                    <!--<div class="sc_content sc_content_default" style="padding-right: 150px;">-->
+                                                    <div class="sc_content sc_content_default">
                                                         <h6 class="sc_item_subtitle sc_content_subtitle sc_align_right sc_item_title_style_default">Vicinato</h6>
                                                         <h2 class="sc_item_title sc_content_title sc_align_right sc_item_title_style_default">Più SERVIZI<br>PIù AREE PER I PICCOLI</h2>
                                                         <div class="sc_content_container"></div>
@@ -1173,7 +1174,7 @@
                                                         <div class="sc_content_container">
                                                             <div class="sc_align_center">
                                                                 <span class="trx_addons_dark" style="color: #88b04b;">KOS S.R.L.</span>
-                                                                <br/> Piazza Monumento<br/> Legnano, MI 20025<br/> Telefono: <span class="trx_addons_dark"><a href="tel:+1234567890">123-456-7890</a> <br/></span> Fax: 098-765-4321<br/> Email: <span class="trx_addons_dark"><a href="mailto:info@yoursite.com">info@yoursite.com</a>
+                                                                <br/> Piazza Monumento<br/> Legnano, MI 20025<br/> Telefono: <span class="trx_addons_dark"><a href="tel:+1234567890" style="color: #88b04b;">123-456-7890</a> <br/></span> Fax: 098-765-4321<br/> Email: <span class="trx_addons_dark"><a href="mailto:info@yoursite.com" style="color: #88b04b;">info@yoursite.com</a>
                                                                 </span>
                                                             </div>
                                                         </div>
@@ -1287,7 +1288,7 @@
                     <div class="copyright_wrap_inner">
                         <div class="content_wrap">
                             <div class="copyright_text">
-                                <a target="_blank" href="https://themerex.net/"> Makuda </a>© <span id="date"></span> . All rights reserved. <a target="_blank" href="http://themerex.net/terms-of-service/">Terms of use</a> and <a target="_blank" href="http://themerex.net/privacy-policy/">Privacy Policy</a>
+                                <a target="_blank" href="https://makudaconsulting.com/" style="color: #88b04b;"> Makuda </a>© <span id="date"></span> . All rights reserved. Terms of use and Privacy Policy
                             </div>
                         </div>
                     </div>
