--- a/index.html
+++ b/index.html
@@ -309,13 +309,13 @@
                                                                 <img src="images/design/01.jpeg" style="height: 100%; width: 100%; object-fit: cover; position: absolute;">
                                                             </div>
                                                         </div>
-                                                        <div class="sc_promo_text" style="margin-left:50%;">
+                                                        <div class="sc_promo_text promo_text_right">
                                                             <div class="sc_promo_text_inner">
                                                                 <h6 class="sc_item_subtitle sc_promo_subtitle sc_align_default sc_item_title_style_default">Appartamenti di Lusso</h6>
                                                                 <!--<h2 class="sc_item_title sc_promo_title sc_align_default sc_item_title_style_default">Introducing a new residential complex</h2>-->
                                                                 <h2 class="sc_item_title sc_promo_title sc_align_default sc_item_title_style_default">Design</h2>
-                                                                <div class="sc_item_descr sc_promo_descr sc_align_default">Il design di ogni appartamento è stato realizzato singolarmente per massimizzare lo spazio e la luce. Smart Home Technology installed as standard in each apartment putting you in total control of your home at the
-                                                                    touch of a button from wherever you might be.</div>
+                                                                <div class="sc_item_descr sc_promo_descr sc_align_default">Il design di ogni appartamento è stato realizzato singolarmente per massimizzare lo spazio e la luce.
+                                                                    Smart home di ultima generazione che permette di controllare tutta la casa comodamente ovunque di trovo con il semplice tocco di un pulsante.</div>
                                                                 <div class="sc_item_button sc_item_button_simple sc_promo_button sc_align_default sc_button_wrap">
                                                                     <!--
                                                                     <a href="#" class="sc_button sc_button_simple sc_button_size_normal sc_button_icon_left">
@@ -391,7 +391,7 @@
                                                 <div class="column-inner">
                                                     <div class="height_large"></div>
                                                     <div class="sc_promo sc_promo_modern sc_promo_size_large sc_promo_no_paddings sc_promo_image_position_right sc_promo_image_width_50p" style="height: 500px;">
-                                                        <div class="sc_promo_image_wrap" style="width: 60%;">
+                                                        <div class="sc_promo_image_wrap" style="width: 55%;">
                                                             <div class="sc_promo_image bg_image_1">
                                                                 <img src="images/design/07.jpeg" style="height: 100%; width: 100%; object-fit: cover; position: absolute;">
                                                             </div>
@@ -402,7 +402,9 @@
                                                                 <h6 class="sc_item_subtitle sc_promo_subtitle sc_align_default sc_item_title_style_default"></h6>
                                                                 <!--<h2 class="sc_item_title sc_promo_title sc_align_default sc_item_title_style_default">Introducing a new residential complex</h2>-->
                                                                 <h2 class="sc_item_title sc_promo_title sc_align_default sc_item_title_style_default">Finiture</h2>
-                                                                <div class="sc_item_descr sc_promo_descr sc_align_default">L’accurata selezione di colori e finiture assicura un’autenticità stilistica senza eguali, mentre le più moderne tecnologie garantiscono prestazioni tecniche, pratiche e funzionali di altissimo livello.</div>
+                                                                <div class="sc_item_descr sc_promo_descr sc_align_default">L’accurata selezione di colori e finiture assicura un’autenticità stilistica senza eguali, mentre le più moderne tecnologie garantiscono prestazioni tecniche, pratiche e funzionali di altissimo livello.
+                                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                                                </div>
                                                                 <div class="sc_item_button sc_item_button_simple sc_promo_button sc_align_default sc_button_wrap">
                                                                 </div>
                                                             </div>
@@ -1102,7 +1104,9 @@
                                                                 <h6 class="sc_item_subtitle sc_promo_subtitle sc_align_default sc_item_title_style_default"></h6>
                                                                 <!--<h2 class="sc_item_title sc_promo_title sc_align_default sc_item_title_style_default">Introducing a new residential complex</h2>-->
                                                                 <h2 class="sc_item_title sc_promo_title sc_align_default sc_item_title_style_default">olona greenway</h2>
-                                                                <div class="sc_item_descr sc_promo_descr sc_align_default">Per praticare sport e per passare il tempo libero all'aria aperta, il complesso è situato vicino all'olona greenway, un percorso ciclo-pedonale immerso nel verde, molto apprezzato da coloro che già lo frequentano.</div>
+                                                                <div class="sc_item_descr sc_promo_descr sc_align_default">Per praticare sport e per passare il tempo libero all'aria aperta, il complesso è situato vicino all'olona greenway, un percorso ciclo-pedonale immerso nel verde, molto apprezzato da coloro che già lo frequentano.
+                                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                                                </div>
                                                                 <div class="sc_item_button sc_item_button_simple sc_promo_button sc_align_default sc_button_wrap">
                                                                 </div>
                                                             </div>
@@ -1188,8 +1192,8 @@
                                                     <a id="sc_anchor_contacts" class="sc_anchor sc_anchor_default" title="Contatti" data-icon="icon-email" data-url=""></a>
 
                                                     <div id="sc_googlemap_1_wrap" class="sc_googlemap_wrap">
-                                                        <div id="sc_googlemap_1" class="sc_googlemap sc_googlemap_default h92vh" style="padding-top: 100px;" data-zoom="16" data-style="dark">
-                                                            <iframe src="https://snazzymaps.com/embed/382113" width="100%" height="600px" style="border:none;"></iframe>
+                                                        <div id="sc_googlemap_1" class="sc_googlemap sc_googlemap_default h92vh" style="padding-top: 25px;" data-zoom="16" data-style="dark">
+                                                            <iframe src="https://snazzymaps.com/embed/382113" width="100%" height="100%" style="border:none;"></iframe>
                                                         </div>
                                                     </div>
 
