--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                                         <div class="columns_wrap">
                                             <div class="column_container column-1_1">
                                                 <div class="column-inner">
-                                                    <div class="height_large"></div>
+                                                    <!--<div class="height_large"></div>-->
                                                     <div class="sc_promo sc_promo_modern sc_promo_size_large sc_promo_no_paddings sc_promo_image_position_right sc_promo_image_width_50p" style="height: 500px;">
                                                         <div class="sc_promo_image_wrap" style="width: 55%;">
                                                             <div class="sc_promo_image bg_image_1">
@@ -501,6 +501,7 @@
                                             <div class="column_container column-1_1">
                                                 <div class="column-inner">
                                                     <div class="height_large"></div>
+                                                    <div class="height_tiny"></div>
                                                     <div class="sc_content sc_content_default">
                                                         <!--<h6 class="sc_item_subtitle sc_content_subtitle sc_align_center sc_item_title_style_shadow">03</h6>-->
                                                         <h2 class="sc_item_title sc_content_title sc_align_center sc_item_title_style_shadow">Piantine</h2>
@@ -840,7 +841,7 @@
                                                         </aside>
                                                     </div>
                                                     <div class="height_large hide_on_mobile"></div>
-                                                    <div class="height_tiny"></div>
+                                                    <!--<div class="height_tiny"></div>-->
                                                 </div>
                                             </div>
                                         </div>
@@ -1056,7 +1057,7 @@
                                 </div>
                             </section>
 
-                            <section class="no-col-padding columns-stretch content-middle" style="min-height: 80vh;">
+                            <section class="no-col-padding columns-stretch content-middle">
                                 <div class="container">
                                     <div class="row">
                                         <!--<a id="sc_anchor_new_complex_3" class="sc_anchor sc_anchor_default" title="Finiture" data-icon="icon-star-2" data-url="#new_complex_3"></a>-->
@@ -1077,7 +1078,9 @@
                                                                 <!--<h2 class="sc_item_title sc_promo_title sc_align_default sc_item_title_style_default">Introducing a new residential complex</h2>-->
                                                                 <h2 class="sc_item_title sc_promo_title sc_align_default sc_item_title_style_default">olona greenway</h2>
                                                                 <div class="sc_item_descr sc_promo_descr sc_align_default">Per praticare sport e per passare il tempo libero all'aria aperta, il complesso è situato vicino all'olona greenway, un percorso ciclo-pedonale immerso nel verde, molto apprezzato da coloro che già lo frequentano.
-                                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                                                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                                                 </div>
                                                                 <div class="sc_item_button sc_item_button_simple sc_promo_button sc_align_default sc_button_wrap">
                                                                 </div>
